<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:elevation="10dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="@id/detail_backdrop"
            app:layout_constraintEnd_toEndOf="@id/detail_backdrop"
            app:layout_constraintStart_toStartOf="@id/detail_backdrop"
            app:layout_constraintTop_toTopOf="@+id/detail_backdrop" />

        <ImageView
            android:id="@+id/detail_backdrop"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@color/colorPrimaryLight"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/backdrop_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="180dp"
            android:layout_height="220dp"
            android:layout_marginTop="184dp"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintEnd_toEndOf="@+id/detail_backdrop"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/detail_backdrop"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_poster"
            tools:text="John Wick 3" />

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/detail_title"
            app:layout_constraintStart_toStartOf="@+id/detail_title"
            app:layout_constraintTop_toBottomOf="@+id/detail_title"
            tools:text="2020-02-20" />

        <TextView
            android:id="@+id/detail_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_date"
            tools:text="Action, Crime, Mature" />

        <TextView
            android:id="@+id/rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/viewers_rating"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_genres" />

        <TextView
            android:id="@+id/detail_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/rating_text"
            app:layout_constraintStart_toEndOf="@+id/rating_text"
            app:layout_constraintTop_toTopOf="@+id/rating_text"
            tools:text="8.5/10"/>

        <ImageView
            android:id="@+id/star_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/star_icon"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintBottom_toBottomOf="@+id/detail_rating"
            app:layout_constraintStart_toEndOf="@+id/detail_rating"
            app:layout_constraintTop_toTopOf="@+id/detail_rating"
            app:tint="#fea339" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:layout_marginEnd="16dp"
            app:tint="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/star_icon" />

        <TextView
            android:id="@+id/overview_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/overview"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_text" />

        <TextView
            android:id="@+id/detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview_text"
            tools:text="A former fighter reluctantly returns to the life she abandoned in order to help her sister survive the sadistic world of illegal fighting and the maniac who runs it" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>